# arbitratus

./: Cargo.toml  README.md
consumer/: Cargo.toml
consumer/src/: logger.rs  main.rs
discovery/: Cargo.toml
discovery/src/: logger.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
