[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
env_logger = "0.11.5"
fern = "0.7.0"
log = "0.4.22"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }

shared.workspace = true

